# django_templates

./: .pre-commit-config.yaml  DB_NOTES.md  NEW_PROJECT.md  README.md
app/templates/: base.html  index.html
app_core_tmpl/app_name/: apps.py  forms.py  urls.py
base/: settings.py
project_tmpl/: README.md  pyproject.toml
project_tmpl/apps/core/: urls.py  views.py
project_tmpl/apps/core/templates/core/: home.html
project_tmpl/project_name/: settings.py  urls.py  wsgi.py
project_tmpl/templates/: base.html  base_mdbootstrap.html  base_tailwind.html
